tests/bad/enum_duplicate_fields.oc
/// fail: Duplicate enum value: Beta

enum Foo {
    Alpha
    Beta
    Gamma
    Beta
}